# order_managing_service

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  wait_for_pg.sh
app/: consumer.py  main.py
app/common/adapters/: __init__.py  celery.py  postgres.py  rabbitmq.py  redis.py
app/common/schemas/: __init__.py  base.py  message.py  user.py
app/core/: __init__.py  auth.py  celery.py  config.py  database.py  logger.py  rabbit.py
app/enums/: __init__.py  order_status.py  token_enum.py  user_enum.py
app/models/order/: __init__.py  order.py
app/models/token/: __init__.py  token.py
app/models/user/: __init__.py  user.py
app/schemas/: __init__.py
app/schemas/order/: __init__.py  broker_order.py  order.py
app/schemas/token/: __init__.py  token.py
app/schemas/user/: __init__.py  auth.py  user.py
app/services/auth/: __init__.py  auth.py
app/services/orders/: __init__.py  order.py
app/services/tokens/: __init__.py  token.py
app/services/users/: __init__.py  (+1 more)
app/settings/: __init__.py
app/startup/: __init__.py  admin.py  startup.py
app/utils/: __init__.py  crypto_manager.py  datetime_manager.py  logger.py  middleware.py  normalize_datetime.py
migrations/: env.py
migrations/versions/: 10d571bf5fea_rename_is_active_to_status_in_user_model.py  28272990b7c9_added_role_in_user_model.py  2d5d797330b0_remoed_nullable_true_from_items_in_.py  42e13ab23ec7_updated_status_in_user_model.py  96b68ceaf4d8_init_db.py  e58c31efcbee_added_items_in_order_model.py  ea271267ecd7_added_is_active_in_user_model.py
(+24 files in other folders)
