[tool.poetry]
name = "tz-auth-fastapi"
version = "0.1.0"
description = ""
authors = ["Pavel Lukyanov <pasha.lukyanov08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.2"
pyjwt = "^2.10.1"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
python-multipart = "^0.0.20"
python-dotenv = "^1.2.1"
alembic = "^1.17.2"
uvicorn = "^0.38.0"
redis = "^7.1.0"
pydantic-settings = "^2.12.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
cryptography = "^46.0.3"
passlib = "^1.7.4"
pytest = "^9.0.2"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
